# pfl-forge

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pfl-forge.yaml.example
.claude/: settings.json
.claude/hooks/: pre-commit-fmt.sh
.github/workflows/: release.yml
docs/: agents.md  architecture.md  data-model.md  migration.md  pipeline.md  runner.md  testing.md
docs_new/: agents.md  architecture.md  data-model.md  migration.md  runner.md
src/: config.rs  error.rs  eval.rs  lib.rs  main.rs  parent_prompt.rs  task.rs
src/agent/: analyze.rs  audit.rs  implement.rs  mod.rs  operator.rs  reflect.rs  review.rs  skill.rs
src/agents/: analyze.rs  architect.rs  consult.rs  implement.rs  mod.rs  orchestrate.rs  parent.rs  review.rs  triage.rs  worker.rs
src/claude/: model.rs  runner.rs
src/git/: branch.rs  mod.rs  worktree.rs
src/github/: client.rs  issue.rs  mod.rs
src/intent/: draft.rs  mod.rs  registry.rs
src/knowledge/: history.rs  mod.rs  observation.rs  summary.rs
src/pipeline/: clarification.rs  execute.rs  fetch.rs  integrate.rs  mod.rs  report.rs  review.rs  triage.rs  work.rs
src/prompt/: analyze.md  architect.md  audit.md  consult.md  deep_triage.md  implement.md  mod.rs  operator.md  parent.md  reflect.md  review.md  skill_abstract.md  skill_observe.md  worker.md
src/runner/: flow.rs  mod.rs
src/state/: tracker.rs
src/task/: clarification.rs  fetch.rs  issue.rs  mod.rs  work.rs
tests/: eval_test.rs
tests/agent/: analyze.rs  audit.rs  implement.rs  main.rs  mock_claude.rs  operator.rs  reflect.rs  review.rs  skill.rs
(+11 files in other folders)
